Autopark level 15. Added thread that checking broken vehicles from DB each 10 seconds