@@ -1,6 +1,7 @@
 package application.infrastructure.core.impl;
 
-import application.infrastructure.configurators.impl.ObjectConfigurator;
+import application.infrastructure.configurators.impl.configurators.ObjectConfigurator;
+import application.infrastructure.configurators.impl.configurators.ProxyConfigurator;
 import application.infrastructure.core.Context;
 import application.infrastructure.core.ObjectFactory;
 import application.infrastructure.core.annotations.InitMethod;
@@ -12,6 +13,7 @@ import java.util.Set;
 
 public class ObjectFactoryImpl implements ObjectFactory {
     private final Context context;
+    private final List<ProxyConfigurator> proxyConfigurators = new ArrayList<>();
     private final List<ObjectConfigurator> objectConfigurators = new ArrayList<>();
 
     @SneakyThrows
@@ -19,11 +21,22 @@ public class ObjectFactoryImpl implements ObjectFactory {
         this.context = context;
         Set<Class<? extends ObjectConfigurator>> sets = context.getConfig().getScanner().getSubTypesOF(ObjectConfigurator.class);
         for (Class<?> c: sets ) {
-            objectConfigurators.add((ObjectConfigurator) c.newInstance());
+            objectConfigurators.add((ObjectConfigurator) c.getDeclaredConstructor().newInstance());
+        }
+        Set<Class<? extends ProxyConfigurator>> proxies = context.getConfig().getScanner().getSubTypesOF(ProxyConfigurator.class);
+        for (Class<? extends ProxyConfigurator> p : proxies) {
+            proxyConfigurators.add(p.getDeclaredConstructor().newInstance());
         }
     }
+
+    private <T> T makeProxy(Class<T> implClass, T object) {
+        for (ProxyConfigurator p : proxyConfigurators) {
+            object = p.makeProxy(object, implClass, context);
+        }
+        return object;
+    }
     private  <T> T create(Class<T> implementation) throws  Exception{
-        return implementation.newInstance();
+        return implementation.getDeclaredConstructor().newInstance();
     }
     private <T> void configure (T object) {
         for (ObjectConfigurator o : objectConfigurators) {
@@ -45,6 +58,7 @@ public class ObjectFactoryImpl implements ObjectFactory {
         T object = create(implementation);
         configure(object);
         initialize(implementation, object);
+        object = makeProxy(implementation, object);
         return object;
     }
 }
